<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="397dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/activity_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_1" />

        <Button
            android:id="@+id/activity_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_2" />

        <Button
            android:id="@+id/activity_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_3" />

        <Button
            android:id="@+id/activity_4_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_4_5_sensors" />

        <Button
            android:id="@+id/activity_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_6_coordinates" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>