<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthFifthActivity">

    <TextView
        android:id="@+id/light_text"
        android:layout_width="307dp"
        android:layout_height="34dp"
        android:text="@string/light_intensity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/temperature_text"
        android:layout_width="306dp"
        android:layout_height="37dp"
        android:text="@string/temperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/light_text"
        app:layout_constraintVertical_bias="0.08" />

    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="84dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature_text"
        app:layout_constraintVertical_bias="0.17"
        tools:visibility="visible">

        <TextView
            android:id="@+id/gyroscope_text_X"
            android:layout_width="238dp"
            android:layout_height="27dp"
            android:text="@string/gyroscope_x"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/gyroscope_text_Y"
            android:layout_width="238dp"
            android:layout_height="27dp"
            android:text="@string/gyroscope_y"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/gyroscope_text_Z"
            android:layout_width="238dp"
            android:layout_height="27dp"
            android:text="@string/gyroscope_z"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>